<resources>
    <string name="app_name">HowtoBIT</string>
    <string name="button_text">BEGIN</string>
    <string name="logo_image_desc">Brain logo</string>
    <string name="submit_button_text">SUBMIT</string>
    <string name="back_button_text">BACK</string>
    <string name="home_button_text">Home</string>
    <string name="next_button_text">NEXT</string>
    <string name="save_progress">Save Progress</string>
    <string name="todo">TODO</string>
    <string name="back">BACK</string>
    <string name="reset_all_progress">Reset Progress</string>
    <string name="question_image">Question Image</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="finish_text">Congratulations!</string>
    <string name="title_activity_assessment">AssessmentActivity</string>
    <string name="title_activity_ending_dialog">activity_ending_dialog</string>
    <string name="title_activity_endingdialog">EndingdialogActivity</string>
    <string name="title_activity_complete">CompleteActivity</string>
    <string name="title_activity_failed">FailedActivity</string>
    <string name="complete_text">Level Complete</string>
    <string name="failed_text">Level Failed</string>
    <string name="text_finish"> So, did you enjoy your short adventure in IT?</string>
    <string name="title_activity_yes">activity_yes</string>
    <string name="dashboard_game_card">Play Game</string>
    <string name="back_to_levels">LEVELS</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="submit">SUBMIT</string>
    <string name="username">Username</string>
    <string name="knowledge_level_brain_rot">Knowledge Level:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_activity_summary_activity">SummaryActivity</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="summary">Summary</string>
    <string name="register_title">Register</string>
    <string name="register_text">Confirm Register</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Log in</string>
    <string name="log_in">Log in</string>
    <string name="password_hidden">********</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="nickname">Nickname</string>
    <string name="save">SAVE</string>
    <string name="logout">Logout</string>
    <string name="create_nickname">Create nickname</string>
    <string name="topic">Topic</string>
    <string name="leaderboard_text">Leaderboard</string>
    <string name="_1">1</string>
    <string name="nickname_text">Nickname</string>
    <string name="score_100">Score: 100</string>
    <string name="introduction_to_it">Introduction to IT</string>
    <string name="learn_the_basics_of_the_it_field">Learn the basics of the IT field</string>
    <string name="score">Score</string>
    <string name="knowledge_level">Knowledge Level:</string>
    <string name="reset_topic">Reset Topic</string>
    <string name="levels_text">LEVELS</string>


</resources>