<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".SplashActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:fontFamily="@font/blueberry_personal"
        android:text="@string/button_text"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:backgroundTint="@color/celestial_blue"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="233dp"
        android:layout_height="233dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#FEFFFFFF"
        app:cardCornerRadius="115dp"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_image_desc"
            android:scaleType="centerCrop"
            android:src="@mipmap/brainlogo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/blueberry_personal"
        android:text="@string/app_name"
        android:textColor="@color/celestial_blue"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>