<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue">

    <!-- The speech bubble acts as a frame -->

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="334dp"
        android:layout_height="366dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toTopOf="@+id/assessment_radio_group"
        app:layout_constraintEnd_toEndOf="@+id/assessment_radio_group"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/assessment_radio_group"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/speech_bubble" />

    <TextView
        android:id="@+id/assessment_question_text"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="25sp"
        android:text="@string/text_finish"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/celestial_blue"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.383"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/assessment_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageView7"
        tools:layout_editor_absoluteY="423dp">

        <RadioButton
            android:id="@+id/yes_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/yes"
            android:textColorLink="@color/celestial_blue"
            android:textSize="24sp"
            app:buttonTint="@color/radio_button_tint" />

        <RadioButton
            android:id="@+id/no_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/no"
            android:textColorLink="@color/celestial_blue"
            android:textSize="24sp"
            app:buttonTint="@color/radio_button_tint" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_assessment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/blueberry_personal"
        android:text="@string/submit"
        app:backgroundTint="@color/celestial_blue"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/assessment_radio_group"
        app:layout_constraintStart_toStartOf="@+id/assessment_radio_group"
        app:layout_constraintTop_toBottomOf="@+id/assessment_radio_group"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>